<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activanithi"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="42dp"
        android:text="@string/skm"
        android:textColor="#ffffff" />

    <EditText
        android:textColor="#ffffff"
        android:id="@+id/estartingkm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:textColor="#ffffff"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/estartingkm"
        android:layout_marginTop="24dp"
        android:text="@string/ekm" />

    <EditText
        android:textColor="#ffffff"
        android:id="@+id/eendingkm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/estartingkm"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:textColor="#ffffff"
        android:id="@+id/efuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:textColor="#ffffff"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/eendingkm"
        android:layout_marginTop="22dp"
        android:text="@string/fuel" />

    <TextView
        android:textColor="#00ff00"
        android:id="@+id/mielage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/efuel"
        android:layout_alignParentBottom="true"
        android:text="" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/efuel"
        android:layout_centerVertical="true"
        android:text="@string/Reset"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/bsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bcalculate"
        android:layout_alignBottom="@+id/bcalculate"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/save"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/bcalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reset"
        android:layout_alignBottom="@+id/reset"
        android:layout_alignLeft="@+id/efuel"
        android:text="@string/calculate"
        android:textColor="#ffffff" />

</RelativeLayout>